--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "@chakra-ui/react": "^3.15.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@types/jwt-decode": "^2.2.1",
+    "axios": "^1.9.0",
+    "composer": "^4.1.0",
     "framer-motion": "^12.6.3",
+    "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
